# bbuddy

./: .gitignore  LICENSE.txt  README.md  bbuddy.py  install.py  pyproject.toml
bbuddy/: bbuddy.py  bindump.py  dbdump.py  fffind.py  git_consolidate.py  gitlog  ppgrep.py  pylintrc
bbuddy/unmaintained/: install.py  rreplace.py
src/: README.md  bbuddy.py  bbuddy_qt.py  bindump.py  dbdump.py  fffind.py  git_consolidate.py  install.py  ppgrep.py  pylintrc  rreplace.py
tools/: fffind.py  ppgrep.py  rreplace.py
