[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbuddy"
version = "0.0.2rc1"
authors = [
  { name="Dick Justice", email="dickjustice@x2400.com" },
]
packages = [
  { include="bbuddy"}
]
description = "collection of helpful bash tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dickjustice/bbuddy"

[tool.hatch.build]
include = [
  "bbuddy/*.py",
]
exclude = [
  ".gitignore",
  "bbuddy/.gitignore",  
]

[project.scripts]
bindump   = "bbuddy.bindump:main"
fffind    = "bbuddy.fffind:main"
ppgrep    = "bbuddy.ppgrep:main"
dbdump    = "bbuddy.dbdump:main"
git_consolidate  = "bbuddy.git_consolidate:main"
bbuddy   = "bbuddy.bbuddy:main"
